fixed spacing

--- a/_sass/_archive.scss
+++ b/_sass/_archive.scss
@@ -47,11 +47,6 @@
     opacity: 0.5;
   }
 }
-
-.archive__item-excerpt {
-  margin-top: 0; // Ensure no extra spacing above the description
-}
-
 /* remove border*/
 .page__content {
 
